# HR_scrining_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ScreenCast.md  docker-compose.yml  pyproject.toml  questions_criteria _explanations.md
app/: main.py
app/bot/: commands.py  handlers.py  keyboards.py  messages.py  router.py  states.py
app/core/: errors.py  logging_config.py  settings.py
app/domain/: models.py  service.py  validators.py
app/integrations/: llm_client.py  notifier.py  sheets_client.py
app/prompts/: __init__.py  screening_prompt.txt
app/storage/: redis_storage.py
scripts/: _encoding_test.txt  redis_smoke_test.py  sheets_smoke_test.py
tests/: test_llm_parsing.py  test_messages.py  test_sheets_upsert.py  test_validators.py
