[project]
name = "HR_scrinning_bot"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies"]

#poetry lock
#poetry install --with dev
#poetry run pre-commit install --hook-type pre-push

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
gspread = "^6.2.1"
httpx = "^0.28.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
redis = "^6.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["pytest-cache-files-*", ".pytest-temp"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-temp"
markers = [
  "integration: tests requiring database",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
files = ["app", "tests"]
plugins = ["pydantic.mypy"]
exclude = '(?x)(^|[/\\\\])(pytest-cache-files-[^/\\\\]+|\\.pytest-temp|\\.venv|\\.mypy_cache|\\.ruff_cache)([/\\\\]|$)'
ignore_missing_imports = true
show_error_codes = true
pretty = true
warn_unused_ignores = true
no_implicit_optional = true
